--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
+        "doctrine/dbal": "^3.6",
         "fakerphp/faker": "^1.9.1",
+        "laravel/dusk": "^7.7",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
